k8s/envoy-gateway-routes.yaml
# 1. Register the GatewayClass for Envoy Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
# 2. Instantiate the external Gateway listener on HTTP port 80
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

---
# 3. Create the HTTPRoute to route port 80 traffic to ArgoCD Server
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: external-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "argocd.vennpham.dev"
  - "argocd.vennpham.local"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80

---
# 4. Create the HTTPRoute to route port 80 traffic to Grafana
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "grafana.vennpham.local"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 80

---
# 5. Create the HTTPRoute to route port 80 traffic to Loki
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-route
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "loki.vennpham.local"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: loki
      port: 3100

---
# 6. Create the HTTPRoute to route port 80 traffic to Prometheus Server
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "prometheus.vennpham.local"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-server
      port: 80

---
# 7. Create the HTTPRoute to route port 80 traffic to ClickStack (HyperDX UI)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clickstack-route
  namespace: clickstack
spec:
  parentRefs:
  - name: external-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "clickstack.vennpham.dev"
  - "clickstack.vennpham.local"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: clickstack-app
      port: 3000
